--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ package-lock.json
 yarn.lock
 
 commit.sh
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/backend/amplify-meta.json
+aws-exports.js
+awsconfiguration.json
