--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-    "projectName": "trading-tools",
+    "projectName": "tradingtools",
     "version": "1.0",
     "frontend": "javascript",
     "javascript": {
@@ -7,8 +7,8 @@
         "config": {
             "SourceDir": "src",
             "DistributionDir": "build",
-            "BuildCommand": "yarn run build",
-            "StartCommand": "yarn run start"
+            "BuildCommand": "npm run-script build",
+            "StartCommand": "npm run-script start"
         }
     },
     "providers": [
