--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "trading-tools",
   "version": "2.0.0",
-  "private": true,
-  "author": "Creative Tim",
-  "license": "See license in https://www.creative-tim.com/license",
+  "private": "false",
+  "author": "Fizzory",
+  "license": "FSQ Internal",
   "description": "React version of Material Kit 2 by Creative Tim",
-  "homepage": "https://demos.creative-tim.com/material-kit-react/#/",
   "bugs": {
-    "url": "https://github.com/creativetimofficial/ct-material-kit-react/issues"
+    "url": "https://github.com/Watcharagorn/trade-helper/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/creativetimofficial/ct-material-kit-react.git"
+    "url": "git+https://github.com/Watcharagorn/trade-helper.git"
   },
   "engines": {
     "node": "14 || 15 || 16",
